# number-shortener

./: Cargo.toml  README.md
examples/: interactive.rs  simple.rs
src/: lib.rs
src/short_number/: mod.rs  prefix.rs
